integrated register/login with bend

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@
 {%endblock%}
 
 {% block navbar_name %}
-<l class="navbar-brand">It's Dashboard!</l>
+<l class="navbar-brand"></l>
 {% endblock %}
 
 {% block content %}
@@ -17,7 +17,7 @@
        </div>
                  <div class="col-md-9 columns">
                    <div class="jumbotron">
-                     <h2>Welcome to your KY! Dashboard</h2>
+                     Welcome to your KY! Dashboard
                    </div>
 
                    {% if messages %}
