--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,7 @@
       {% endblock %}
                     {% block unauth %}
                     <div class="text-center">
-                      <a class="btn btn-primary btn-lg" href="{% url 'kyusers:login' %}">Log In</a>
-                      <a class="btn btn-default " href="{% url 'kyusers:register' %}">Sign Up</a>
+                      <a class="btn btn-default btn-lg" href="{% url 'kyusers:form' %}">Get Started</a>
                     </div>
                     {% endblock %}
 
